created function colorSelector in order to grab the selected color value, and remove the # symbol for the color code so it can GET the correct colors from the API.

--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
   </head>
   <body>
     <div class="main">
-      <h1><span class="rainbow">olor</span> Generator</h1>
+      <h1><span class="rainbow">Color</span> Generator</h1>
       <div class="color-container" id="color-container">
         <div id="color-info">
           <input
             type="color"
-            name="input-color"
-            class="color-selector"
             id="color-selector"
           />
-          <select name="color-scheme" class="color-sc" id="color-scheme">
+          <select name="color-scheme" class="color-scheme" id="color-scheme">
             <option value="">--Choose a color scheme--</option>
             <option value="monochrome">Monochrome</option>
             <option value="monochrome-dark">Monochrome-dark</option>
