added JS functino to copy the created color code and the color bar on a 'click', and created a folder to hold images, and anew html file in order to create a guide for how to use the application. CSS was added to the Scheme Conatiner.

--- a/index.html
+++ b/index.html
@@ -30,12 +30,15 @@
       </div>
 
       <div id="scheme-container">
+        <h3>Confused?</h3>
+        <div href = ""></div>
         <!-- SCHEME COLORS HERE -->
       </div>
       <div id="scheme-color-info">
         <!-- COLOR INFO HERE -->
       </div>
     </div>
+
     <script src="app.js"></script>
   </body>
 </html>
