created the html in the guide.html file, and created new styling in the css file for the guide.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
 
       <div id="scheme-container">
-        <h3>Confused?</h3>
+        <h3>Confused? <a class="guide-tutorial" href="guide.html">CLICK HERE</a></h3>
         <div href = ""></div>
         <!-- SCHEME COLORS HERE -->
       </div>
