--- a/guide.html
+++ b/guide.html
@@ -25,31 +25,31 @@
 
         <p class ="steps">Step: 3</p>
         <img src="./images/HowTo3.png">
-        <h4>Next, use the color bar to choose a color, and then you can choose any desired shade of that color by clicking anywhere in the large box.</h4>
+        <h4>Once the color is chosen you can select a color scheme in the drop down menu. There are 7 selections.</h4>
 
         <hr>
 
         <p class ="steps">Step: 4</p>
         <img src="./images/HowTo4.png">
-        <h4>Next, use the color bar to choose a color, and then you can choose any desired shade of that color by clicking anywhere in the large box.</h4>
+        <h4>Choose one of the several selections in the drop down menu.</h4>
 
         <hr>
 
         <p class ="steps">Step: 5</p>
         <img src="./images/HowTo5.png">
-        <h4>Next, use the color bar to choose a color, and then you can choose any desired shade of that color by clicking anywhere in the large box.</h4>
+        <h4>When you have the color, and scheme selected you can now click the "Get Color Scheme" button and it will generate 5 options of the color and like colors for you depending on the color scheme you chose.</h4>
 
         <hr>
 
         <p class ="steps">Step: 6</p>
         <img src="./images/HowTo6.png">
-        <h4>Next, use the color bar to choose a color, and then you can choose any desired shade of that color by clicking anywhere in the large box.</h4>
+        <h4>Lastly, you can click on the color or the code and it will copy to your mouse so you can easily paste it where needed. Thanks for using this application! 😃</h4>
 
         <hr>
 
     </div>
 
-    <button id="go-home">Go Home?</button>
+    <a class="go-home" href="./index.html">Go Home?</a>
 
     <script src="app.js"></script>
   </body>
