prettiered the files, and reformatted the ReadME and added more information.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
       </div>
 
       <div id="scheme-container">
-        <h3>Confused? <a class="guide-tutorial" href="tutorial.html">CLICK HERE</a></h3>
-        <div href = ""></div>
+        <h3>
+          Confused?
+          <a class="guide-tutorial" href="tutorial.html">CLICK HERE</a>
+        </h3>
+        <div href=""></div>
         <!-- SCHEME COLORS HERE -->
       </div>
       <div id="scheme-color-info">
