--- a/tutorial.html
+++ b/tutorial.html
@@ -8,48 +8,63 @@
   <body>
     <h1>Let's choose a unique color together! 😄</h1>
 
-    <hr>
+    <hr />
     <div class="tutorial-container">
+      <p class="steps">Step: 1</p>
+      <img src="./images/HowTo1.png" />
+      <h4>
+        First, we must click on the color box pictured above to get started.
+      </h4>
 
-        <p class ="steps">Step: 1</p>
-        <img src="./images/HowTo1.png">
-        <h4>First, we must click on the color box pictured above to get started.</h4>
+      <hr />
 
-        <hr>
+      <p class="steps">Step: 2</p>
+      <img src="./images/HowTo2.png" />
+      <h4>
+        Next, use the color bar to choose a color, and then you can choose any
+        desired shade of that color by clicking anywhere in the large box.
+      </h4>
 
-        <p class ="steps">Step: 2</p>
-        <img src="./images/HowTo2.png">
-        <h4>Next, use the color bar to choose a color, and then you can choose any desired shade of that color by clicking anywhere in the large box.</h4>
+      <hr />
 
-        <hr>
+      <p class="steps">Step: 3</p>
+      <img src="./images/HowTo3.png" />
+      <h4>
+        Once the color is chosen you can select a color scheme in the drop down
+        menu. There are 7 selections.
+      </h4>
 
-        <p class ="steps">Step: 3</p>
-        <img src="./images/HowTo3.png">
-        <h4>Once the color is chosen you can select a color scheme in the drop down menu. There are 7 selections.</h4>
+      <hr />
 
-        <hr>
+      <p class="steps">Step: 4</p>
+      <img src="./images/HowTo4.png" />
+      <h4>Choose one of the several selections in the drop down menu.</h4>
 
-        <p class ="steps">Step: 4</p>
-        <img src="./images/HowTo4.png">
-        <h4>Choose one of the several selections in the drop down menu.</h4>
+      <hr />
 
-        <hr>
+      <p class="steps">Step: 5</p>
+      <img src="./images/HowTo5.png" />
+      <h4>
+        When you have the color, and scheme selected you can now click the "Get
+        Color Scheme" button and it will generate 5 options of the color and
+        like colors for you depending on the color scheme you chose.
+      </h4>
 
-        <p class ="steps">Step: 5</p>
-        <img src="./images/HowTo5.png">
-        <h4>When you have the color, and scheme selected you can now click the "Get Color Scheme" button and it will generate 5 options of the color and like colors for you depending on the color scheme you chose.</h4>
+      <hr />
 
-        <hr>
+      <p class="steps">Step: 6</p>
+      <img src="./images/HowTo6.png" />
+      <h4>
+        Lastly, you can click on the color or the code and it will copy to your
+        mouse so you can easily paste it where needed. Thanks for using this
+        application! 😃
+      </h4>
 
-        <p class ="steps">Step: 6</p>
-        <img src="./images/HowTo6.png">
-        <h4>Lastly, you can click on the color or the code and it will copy to your mouse so you can easily paste it where needed. Thanks for using this application! 😃</h4>
-
-        <hr>
-
+      <hr />
     </div>
 
     <a class="go-home" href="./index.html">Go Home?</a>
 
     <script src="app.js"></script>
   </body>
+</html>
